# IdleGame1

./: Cargo.toml  README.md
minehut-injector/: build.gradle.kts  settings.gradle.kts
minehut-injector/src/main/java/rs.scrapyard.minehut.injector/: MinehutInjectorPlugin.java
src/: chat.rs  console.rs  db.rs  game.rs  logger.rs  main.rs  ranks.rs  raytrace.rs
src/game/: blocks-reg.json  blocks.rs  grip-item-reg.json  grip_item.rs  menus.rs  session.rs  stateful.rs
