[package]
name = "idle-game-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drax = { git = "https://github.com/ScrapyardRs/Drax", branch = "develop", features = ["nbt"] }
mcprotocol = { git = "https://github.com/ScrapyardRs/MCProtocol.rs", branch = "develop" }
shovel = { git = "https://github.com/ScrapyardRs/Shovel", branch = "develop" }

anyhow = "1.0.68"
chrono = "0.4.23"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["full"] }
futures = "0.3.25"
fern = "0.6.1"
bincode = "1.3.3"
pin-project-lite = "0.2.9"
bytes = "1.4.0"
tokio-util = { version = "0.7.4", features = ["io"] }
rand = "0.8.5"
